# PMK 0.7 released

12 Oct 2003 mipsator
 * removed stuff not related to autoconf into ac_set_variables().
 * added some more stuff in ac_set_variables().
 * changed init of alternative variables in func.

10 Oct 2003 mipsator
 * improved process_template().
 * fixed computing of top_srcdir in ac_process_dyn_var().
 * more changes in ac_set_variables().

# snapshot 0.6.6

07 Oct 2003 mipsator
 * more autoconf compat.
 * added target for pmkinstall in Makefile.pmk.
 * updated Makefile.
 * fixed missing '/' in pmkscan.h.

06 Oct 2003 mipsator
 * finished addition of third license clause.

05 Oct 2003 mipsator
 * added missing variables for autoconf compatibility.
 * added third license clause to almost all the files.
 * imported pmkinstall tools for further use.
 * added more third license clause into compat directory.

02 Oct 2003 mipsator
 * renamed pmk_check_include() by pmk_check_header().
 * removed a useless free() in single_append().

01 Oct 2003 mipsator
 * added premk-cvs@lists.sourceforge.net to get commit messages.
 * updated pmkfile man page.
 * added init_var() in pmk to set specific variables.
 * added more stuff in ac_set_variables().
 * added PMKCONF_BIN_CC in premake header.
 * more in init_var() and ac_set_variables().
 * improved process_template() to set configure_input tag.

30 Sep 2003 mipsator
 * changed USERMODE by PMK_USERMODE to avoid conflicts.
 * fixed hash_str_append() in hash.
 * more debug messages in hash.
 * fixed single_append() in functool.
 * improved pmk_check_lib() to use optional LIBS variable.

28 Sep 2003 mipsator
 * added find_file_dir() in common.
 * rewritten find_file() to use find_file_dir().
 * added get_file_dir_path() and single_append() in functool.
 * disabled temporay override in DEFINE command.
 * fixed pmk_check_variable().
 * added VARIABLE in CHECK_CONFIG to store config tool path.
 * added CFLAGS in CHECK_HEADER to store in an alternative variable.
 * put Makefile back in root mode.

# snapshot 0.6.5
