@@ -1,3 +1,6 @@
+14 Oct 2003 mipsator
+ * removed obsolete stuff (mostly compat with 0.6 syntax).
+
 # PMK 0.7 released
 
 12 Oct 2003 mipsator
